--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,23 +65,34 @@ flutter:
   assets:
     - assets/
     - assets/navigation/
-  #   - images/a_dot_ham.jpeg
+    #   - images/a_dot_ham.jpeg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
+    # An image asset can refer to one or more resolution-specific "variants", see
+    # https://flutter.dev/assets-and-images/#resolution-aware
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+    # For details regarding adding assets from package dependencies, see
+    # https://flutter.dev/assets-and-images/#from-packages
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+    # To add custom fonts to your application, add a fonts section here,
+    # in this "flutter" section. Each entry in this list should have a
+    # "family" key with the font family name, and a "fonts" key with a
+    # list giving the asset and other descriptors for the font. For
+    # example:
+  fonts:
+    - family: Kalameh
+      fonts:
+        - asset: assets/font/Kalameh-thin.ttf
+          weight: 100
+        - asset: assets/font/Kalameh-Regular.ttf
+          weight: 400
+        - asset: assets/font/Kalameh-Medium.ttf
+          weight: 500
+        - asset: assets/font/Kalameh-SemiBold.ttf
+          weight: 600
+        - asset: assets/font/Kalameh-Bold.ttf
+          weight: 700
+        - asset: assets/font/Kalameh-ExtraBold.ttf
+          weight: 800
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
