--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_bloc: ^8.1.5
   http: ^1.2.1
   shared_preferences: ^2.2.3
+  shamsi_date: ^1.0.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
