--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
     - assets/
     - assets/navigation/
     - assets/mytests/
+    - assets/profile/
     #   - images/a_dot_ham.jpeg
 
     # An image asset can refer to one or more resolution-specific "variants", see
