--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.2.3
   shamsi_date: ^1.0.2
   intl: ^0.19.0
+  flutter_form_builder: ^9.3.0
 
 dev_dependencies:
   flutter_test:
