--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   shamsi_date: ^1.0.2
   intl: ^0.19.0
   flutter_form_builder: ^9.3.0
+  curved_navigation_bar: ^1.0.6
+  curved_labeled_navigation_bar: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +72,11 @@ flutter:
     - assets/
     - assets/navigation/
     - assets/mytests/
-    - assets/profile/
+    - assets/page1/
+    - assets/page2/
+    - assets/admin/
+    - assets/trainer/
+    - assets/trainee/
     #   - images/a_dot_ham.jpeg
 
     # An image asset can refer to one or more resolution-specific "variants", see
