--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
     - assets/
     - assets/navigation/
     - assets/mytests/
+    - assets/profile/
     - assets/page1/
     - assets/page2/
     - assets/admin/
