--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_form_builder: ^9.3.0
   curved_navigation_bar: ^1.0.6
   curved_labeled_navigation_bar: ^2.0.2
+  flutter_tabbar_page: ^0.0.3
+  vertical_scrollable_tabview: ^0.1.1
 
 dev_dependencies:
   flutter_test:
